Object.wait should emit pinned event